--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>
-            Moult
-            {% block title %}
-            {% endblock %}
-        </title>
+        <title>{% block title %}Moult{% endblock %}</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
@@ -19,7 +15,7 @@
         {% endblock %}
     </head>
     <body>
-        {% include "partials/_header.html.twig" %}
+            {% include "partials/_header.html.twig" %}
         {% block body %}{% endblock %}
     </body>
 </html>
