Afficher la liste des produits pages H et F

--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,7 +1,7 @@
 <header>
 	<nav class="bg-off-white border-gray-200 px-4 lg:px-2 py-2.5 dark:bg-gray-800">
 		<div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-2xl">
-			<a href="#" class="flex items-center">
+			<a href="{{ path('app_home') }}" class="flex items-center">
 				<img src="/uploads/images/logos/logo-Moult.svg" class="mr-3 h-6 sm:h-9" alt="Logo MOULT"/>
 			</a>
 			<div class="flex items-center lg:order-2">
@@ -33,7 +33,7 @@
 						<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">HOMME</a>
 					</li>
 					<li>
-						<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">FEMME</a>
+						<a href="{{ path('app_products_femme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">FEMME</a>
 					</li>
 					<li>
 						<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">NOTRE HISTOIRE</a>
