Affichage header + navbar

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,11 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+
+// Personnalisation scss
+
+.logo-height {
+    height: 50px;
+    max-width: 100%;
+}
