--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
     </head>
     <body>
-            {% include "partials/_header.html.twig" %}
+            {% include 'partials/_navbar.html.twig' %}
         {% block body %}{% endblock %}
             {% include "partials/_footer.html.twig" %}
     </body>
