--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,46 +1,28 @@
 <header>
-	<nav class="bg-off-white border-gray-200 px-4 lg:px-2 py-2.5 dark:bg-gray-800">
-		<div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-2xl">
-			<a href="{{ path('app_home') }}" class="flex items-center">
-				<img src="/uploads/images/logos/logo-Moult.svg" class="mr-3 h-6 sm:h-9" alt="Logo MOULT"/>
-			</a>
-			<div class="flex items-center lg:order-2">
-				<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4">
-					<i class="fas fa-search"></i>
-				</a>
-				<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4">
-					<i class="fas fa-heart"></i>
-				</a>
-				<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4">
-					<i class="fa-solid fa-user"></i>
-				</a>
-				<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white">
-					<i class="fa-solid fa-bag-shopping"></i>
-				</a>
-				<button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
-					<span class="sr-only">Open main menu</span>
-					<svg class="w-6 h-6" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-					</svg>
-					<svg class="hidden w-6 h-6" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-					</svg>
-				</button>
-			</div>
-			<div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
-				<ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
-					<li>
-						<a href="{{ path('app_products_homme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">HOMME</a>
-					</li>
-					<li>
-						<a href="{{ path('app_products_femme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">FEMME</a>
-					</li>
-					<li>
-						<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">NOTRE HISTOIRE</a>
-					</li>
-				</ul>
+	{% if header is not null %}
+		<div class="relative w-full" style="height: 75vh;">
+			<img src="{{ vich_uploader_asset(header, 'imageFile')|imagine_filter('header_thumbnail') }}" alt="{{ header.title }}" class="object-cover w-full h-full">
+			<div class="absolute top-0 left-0 w-full h-full bg-gradient-to-b from-black to-transparent opacity-60"></div>
+			<div class="absolute top-0 left-0 w-full h-full flex items-center justify-center">
+				<div class="text-center text-white">
+					<h1 class="text-4xl font-semibold">{{ header.title }}</h1>
+					<p class="text-xl">{{ header.description }}</p>
+					<a href="{{ header.buttonUrl }}" class="inline-block px-6 py-3 mt-4 text-lg font-medium text-white bg-primary-500 rounded-lg hover:bg-primary-700">
+						{{ header.buttonTitle }}
+					</a>
+				</div>
 			</div>
 		</div>
-	</nav>
+	{% endif %}
 </header>
+
+
+
+
+
+
+
+
+
+
 
