Config menu burger

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -55,3 +55,43 @@
         </button>
     </form>
 {% endblock %}
+
+< section class = " bg-gray-50 dark:bg-gray-900 " > 
+  < div class = " flex flex-col éléments-centre justifier-centre px-6 py-8 mx-auto md:h-écran lg:py-0 " > 
+      < a href = " # " class = " flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white " >  
+          < img class = " w-8 h-8 mr-2 " src = "{{ asset('uploads/images/logos/logo-Moult.svg') }}" alt = " logo Moult " >     
+      </a> _ _
+      < div class = " w-full bg-white arrondi-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700 " > 
+          < div class = " p-6 espace-y-4 md:espace-y-6 sm:p-8 " > 
+              < h1 class = " text-xl font-bold lead-tight tracking-tight text-gray-900 md:text-2xl dark:text-white " > 
+                  Connectez-vous à votre compte
+              </h1> _ _
+              < form class = " espace-y-4 md:espace-y-6 " action = " # " >  
+                  < div >
+                      < label for = " inputEmail " class = " block mb-2 text-sm font-medium text-gray-900 dark:text-white " > Votre email </ label >  
+                      < input type = " email " name = " email " id = " inputEmail " class = " bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm arrondi-lg focus:ring-primary- 600 focus: border-primary-600 block w-full p-2.5 dark: bg-gray-700 dark: border-gray-600 dark: placeholder-gray-400 dark: text-white dark: focus: ring-blue-500 dark:focus:border-blue-500 " placeholder = " name@company.com " required = " " >      
+                  </div> _ _
+                  < div >
+                      < label for = " mot de passe " class = " block mb-2 text-sm font-medium text-gray-900 dark:text-white " > Mot de passe </ label >  
+                      < input type = " password " name = " password " id = " password " placeholder = " •••••••• " class = " bg-gray-50 border border-gray-300 text-gray-900 sm : text-sm round-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark: text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 " requis = " " >      
+                  </div> _ _
+                  < div class = " éléments flexibles-centre justifier-entre " > 
+                      < div class = " flex items-start " > 
+                          < div class = " flex items-center h-5 " > 
+                            < input id = " se souvenir " aria-depressedby = " se souvenir " type = " case à cocher " class = " w-4 h-4 border border-gray-300 arrondi bg-gray-50 focus:ring-3 focus:ring-primary -300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800 " requis = " " >     
+                          </div> _ _
+                          < div class = " ml-3 text-sm " > 
+                            < label for = " se souvenir " class = " text-gray-500 dark:text-gray-300 " > Se souvenir de moi </ label >  
+                          </div> _ _
+                      </div> _ _
+                      < a href = " # " class = " text-sm font-medium text-primary-600 hover:underline dark:text-primary-500 " > Mot de passe oublié ? </a> _ _  
+                  </div> _ _
+                  < button type = " submit " class = " w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium arrondi- lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 " > Se connecter < / bouton >  
+                  < p class = " text-sm font-light text-gray-500 dark:text-gray-400 " > 
+                      Vous n'avez pas encore de compte? < a href = " # " class = " font-medium text-primary-600 hover:underline dark:text-primary-500 " > S'inscrire </ a >  
+                  </p> _ _
+              </ formulaire >
+          </div> _ _
+      </div> _ _
+  </div> _ _
+</ section >
