--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,10 +2,5 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+@import '~flowbite/dist/flowbite.min.css';
 
-// Personnalisation scss
-
-.logo-height {
-    height: 50px;
-    max-width: 100%;
-}
