--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,9 +1,9 @@
-<nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
-	<div class="flex flex-wrap items-center justify-between max-w-screen-xl mx-auto">
+<nav class="bg-white dark:bg-gray-800 shadow-lg">
+	<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 		<a href="{{ path('app_home') }}" class="flex items-center">
-			<img src="{{ asset('uploads/images/logos/logo-Moult.svg') }}" class="h-6 mr-3 sm:h-9" alt="Moult Logo"/>
+			<img src="{{ asset('uploads/images/logos/logo-Moult.svg') }}" class="h-8 mr-3 sm:h-9" alt="Moult Logo"/>
 		</a>
-		<div class="flex items-center lg:order-2">
+		<div class="flex md:order-2">
 			<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4 hidden lg:block">
 				<i class="fas fa-search text-2xl"></i>
 			</a>
@@ -16,33 +16,26 @@
 			<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white">
 				<i class="fas fa-shopping-bag text-2xl"></i>
 			</a>
-			<div id="menu-toggler" class="relative inline-flex">
-				<button type="button" class="items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" id="open-mobile-menu">
-					<span class="sr-only">Open main menu</span>
-					<i class="fas fa-bars text-2xl"></i>
-				</button>
-				<button id="close-mobile-menu" class="hidden absolute top-0 right-0 mt-4 mr-4 lg:hidden">
-					<span class="sr-only">Close menu</span>
-					<i class="fas fa-times text-2xl"></i>
-				</button>
-			</div>
-
+			<button data-collapse-toggle="navbar-cta" type="button" class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-cta" aria-expanded="false">
+				<span class="sr-only">Open main menu</span>
+				<svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+					<path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+				</svg>
+			</button>
 		</div>
-		<div class="items-center justify-between hidden w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
-			<ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
+		<div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
+			<ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 				<li>
-					<a href="{{ path('app_products_homme') }}" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-blue-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">HOMME</a>
+					<a href="{{ path('app_products_homme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">HOMME</a>
 				</li>
 				<li>
-					<a href="{{ path('app_products_femme') }}" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-blue-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">FEMME</a>
+					<a href="{{ path('app_products_femme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">FEMME</a>
 				</li>
 				<li>
-					<a href="#" class="block py-2 pl-3 pr-4 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-blue-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">NOTRE HISTOIRE</a>
+					<a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">NOTRE HISTOIRE</a>
 				</li>
 			</ul>
 		</div>
 	</div>
 </nav>
-
-
 
