--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -4,10 +4,10 @@
 			<img src="{{ asset('uploads/images/logos/logo-Moult.svg') }}" class="h-8 mr-3 sm:h-9" alt="Moult Logo"/>
 		</a>
 		<div class="flex md:order-2">
-			<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4 hidden lg:block">
+			<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4 hidden md:block">
 				<i class="fas fa-search text-2xl"></i>
 			</a>
-			<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4 hidden lg:block">
+			<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4 hidden md:block">
 				<i class="fas fa-heart text-2xl"></i>
 			</a>
 			<a href="{{ path('app_login') }}" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4">
@@ -26,14 +26,20 @@
 		<div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
 			<ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 				<li>
-					<a href="{{ path('app_products_homme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">HOMME</a>
+					<a href="{{ path('app_products_homme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Homme</span></a>
 				</li>
 				<li>
-					<a href="{{ path('app_products_femme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">FEMME</a>
+					<a href="{{ path('app_products_femme') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Femme</span></a>
 				</li>
 				<li>
-					<a href="{{ path('app_our_story') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">NOTRE HISTOIRE</a>
-				</li>
+                    <a href="{{ path('app_our_story') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Notre Histoire</span></a>
+                </li>
+				<li class="md:hidden">
+                    <hr class="my-2 dark:bg-gray-700 dark:border-gray-700">
+                </li>
+                <li class="md:hidden">
+                    <a href="{{ path('app_login') }}" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-primary-500 border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700"><span class="uppercase">Me connecter</span></a>
+                </li>
 			</ul>
 		</div>
 	</div>
