--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -31,14 +31,28 @@
 						{% endfor %}
 					</div>
 				</div>
-				{# Ajouter ici la section pour les options de manche si le produit est une veste #}
+				{# Section pour les options de manche si le produit est une veste #}
 				{% if product.sleeveOptions|length > 0 %}
-					<div class="mt-8">
-						<h3 class="text-xl font-semibold mb-4">Options de manche :</h3>
-						<div class="flex flex-wrap">
-							{% for sleeveOption in product.sleeveOptions %}
-								<button class="fb-button fb-button-secondary mr-2 mb-2">{{ sleeveOption.sleeve.name }}</button>
-							{% endfor %}
+				<div class="mt-8">
+					<div class="relative inline-flex">
+						<button id="sleeveOptionsDropdownButton" data-dropdown-toggle="dropdown" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
+							Choisissez une option de manche
+							<svg class="w-4 h-4 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+							</svg>
+						</button>
+						<div id="sleeveOptionsDropdownMenu" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-56 mt-2 top-full left-0 absolute dark:bg-gray-700">
+							<ul class="py-2 text-sm text-gray-700 dark:text-gray-200">
+								{% for sleeveOption in product.sleeveOptions %}
+									<li>
+										<label class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white cursor-pointer">
+											<input class="hidden" type="radio" name="sleeveOption" value="{{ sleeveOption.sleeve.id }}">
+											<img class="sleeve-thumbnail inline-block mr-2" src="{{ asset('uploads/images/products/' ~ sleeveOption.sleeve.itemImages[0].path) | imagine_filter('product_thumbnail') }}" alt="Image de {{ sleeveOption.sleeve.name }}">
+											{{ sleeveOption.sleeve.name }}
+										</label>
+									</li>
+								{% endfor %}
+							</ul>
 						</div>
 					</div>
 				{% endif %}
@@ -51,4 +65,11 @@
 		</div>
 	</section>
 {% endblock %}
+
+
+
+
+
+
+
 
