--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,25 +4,6 @@
 
 @import '~flowbite/dist/flowbite.min.css';
 
-.header-image-container {
-    position: relative;
-    width: 100%;
-    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
-    overflow: hidden;
-}
+@import 'custom';
 
-.header-image-container img {
-    position: absolute;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-}
-
-@media (min-aspect-ratio: 4/3) {
-    .header-image-container {
-        padding-bottom: 75%; /* 4:3 Aspect Ratio */
-    }
-}
 
