--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -8,14 +8,17 @@
                 <div class="text-center text-white">
                     <h1 class="text-4xl font-semibold">{{ header.title }}</h1>
                     <p class="text-xl">{{ header.description }}</p>
-                    <a href="{{ header.buttonUrl }}" class="inline-block px-6 py-3 mt-4 text-lg font-medium text-white bg-primary-500 rounded-lg hover:bg-primary-700">
-                        {{ header.buttonTitle }}
-                    </a>
+                    {% if header.buttonTitle is not empty and header.buttonUrl is not empty %}
+                        <a href="{{ header.buttonUrl }}" class="inline-block px-6 py-3 mt-4 text-lg font-medium text-white bg-primary-500 rounded-lg hover:bg-primary-700">
+                            {{ header.buttonTitle }}
+                        </a>
+                    {% endif %}
                 </div>
             </div>
         </div>
     {% endif %}
 </header>
+
 
 
 
