--- a/templates/product/homme/list.html.twig
+++ b/templates/product/homme/list.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Les produits pour Homme
+{% block title %}Moult - Les produits pour Homme
 {% endblock %}
 
 {% block body %}
