--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,58 +1,64 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}- Se connecter !
+{% block title %}Moult - Connexion
 {% endblock %}
 
 {% block body %}
-<div class="min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
-	<div class="max-w-md w-full space-y-8">
-		<div>
-			<h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-				Please sign in
-			</h2>
-		</div>
-		<form class="mt-8 space-y-6" method="post">
-			{% if error %}
-				<div class="alert alert-danger text-red-500">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-			{% endif %}
+	<section class="bg-gray-50 dark:bg-gray-900 min-h-screen">
+		<div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+			<a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
+				<img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo">
+				Flowbite
+			</a>
+			<div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
+				<div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+					<h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+						Connectez-vous à votre compte
+					</h1>
+					<form class="space-y-4 md:space-y-6" method="post">
+						{% if error %}
+							<div class="alert alert-danger text-red-500">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+						{% endif %}
 
-			{% if app.user %}
-				<div class="mb-3">
-					Tu es connecté en tant que
-					{{ app.user.userIdentifier }},
-					<a href="{{ path('app_logout') }}">Logout</a>
-				</div>
-			{% endif %}
+						{% if app.user %}
+							<div class="mb-3">
+								Tu es connecté en tant que
+								{{ app.user.userIdentifier }},
+								<a href="{{ path('app_logout') }}">Me déconnecter</a>
+							</div>
+						{% endif %}
 
-			<div class="rounded-md shadow-sm space-y-4">
-				<div>
-					<label for="inputEmail" class="sr-only">Email</label>
-					<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" autocomplete="email" required autofocus placeholder="Email">
-				</div>
-				<div>
-					<label for="inputPassword" class="sr-only">Mot de passe</label>
-					<input type="password" name="password" id="inputPassword" class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" autocomplete="current-password" required placeholder="Mot de passe">
+						<div>
+							<label for="inputEmail" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Votre e-mail</label>
+							<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" autocomplete="email" required autofocus placeholder="name@company.com">
+						</div>
+						<div>
+							<label for="inputPassword" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Mot de passe</label>
+							<input type="password" name="password" id="inputPassword" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" autocomplete="current-password" required placeholder="••••••••">
+						</div>
+						<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+						<div class="flex items-center justify-between">
+							<div class="flex items-start">
+								<div class="flex items-center h-5">
+									<input id="remember" aria-describedby="remember" type="checkbox" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800" name="_remember_me">
+								</div>
+								<div class="ml-3 text-sm">
+									<label for="remember" class="text-gray-500 dark:text-gray-300">Souviens-toi de moi</label>
+								</div>
+							</div>
+							<a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Mot de passe oublié ?</a>
+						</div>
+						<button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">S'identifier</button>
+						<p class="text-sm font-light text-gray-500 dark:text-gray-400">
+							Vous n'avez pas encore de compte?
+							<a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">S'inscrire</a>
+						</p>
+					</form>
 				</div>
 			</div>
-
-            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-
-
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
-    </form>
+		</div>
+	</section>
 {% endblock %}
+
 
