--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="bg-white dark:bg-gray-800 shadow-lg">
 	<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 		<a href="{{ path('app_home') }}" class="flex items-center">
-			<img src="{{ asset('uploads/images/logos/logo-Moult.svg') }}" class="h-8 mr-3 sm:h-9" alt="Moult Logo"/>
+			<img src="{{ asset('uploads/images/logos/logo-Moult.svg') }}" class="h-8 mr-3 sm:h-9" alt="logo Moult"/>
 		</a>
 		<div class="flex md:order-2">
 			<a href="#" class="text-gray-700 hover:text-primary-500 dark:text-white mr-4 hidden md:block">
