--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -40,7 +40,7 @@
 				<h3 class="mb-6 text-sm font-semibold text-gray-400 uppercase dark:text-white">BESOIN D'AIDE ?</h3>
 				<ul>
 					<li class="mb-4">
-						<a class="font-medium text-gray-600 dark:text-gray-400 dark:hover:text-white hover:underline" href="#">Nous contacter</a>
+						<a class="font-medium text-gray-600 dark:text-gray-400 dark:hover:text-white hover:underline" href="{{ path('app_contact') }}">Nous contacter</a>
 					</li>
 				</ul>
 			</div>
