--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,7 +29,7 @@
 
 						<div>
 							<label for="inputEmail" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Votre e-mail</label>
-							<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" autocomplete="email" required autofocus placeholder="name@company.com">
+							<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" autocomplete="email" required autofocus placeholder="nom@prenom.com">
 						</div>
 						<div>
 							<label for="inputPassword" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Mot de passe</label>
@@ -51,7 +51,7 @@
 						<button type="submit" class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">S'identifier</button>
 						<p class="text-sm font-light text-gray-500 dark:text-gray-400">
 							Vous n'avez pas encore de compte?
-							<a href="#" class="font-medium text-primary-600 hover:underline dark:text-primary-500">S'inscrire</a>
+							<a href="{{ path('app_register') }}" class="font-medium text-primary-600 hover:underline dark:text-primary-500">S'inscrire</a>
 						</p>
 					</form>
 				</div>
