--- a/templates/partials/_product_cards.html.twig
+++ b/templates/partials/_product_cards.html.twig
@@ -3,25 +3,24 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
         {% for product in products %}
             <div class="fb-card w-full h-full">
-                {% if product.gender.name == 'homme' %}
+                {% if product.gender.name == 'Homme' %}
                     <a href="{{ path('app_products_homme_show', {'id': product.id}) }}" class="fb-card-media">
                 {% else %}
                     <a href="{{ path('app_products_femme_show', {'id': product.id}) }}" class="fb-card-media">
                 {% endif %}
-                    <img src="{{ asset('uploads/images/products/' ~ product.productImages[0].path) | imagine_filter('product_thumbnail') }}" alt="Image de {{ product.name }}"/>
+                    <img src="{{ asset('uploads/images/products/' ~ product.productImages[0].path) | imagine_filter('product_thumbnail') }}" alt="Image de {{ product.name }}" class="w-full h-full object-cover"/>
                 </a>
                 <div class="fb-card-body">
-                    {% if product.gender.name == 'homme' %}
+                    {% if product.gender.name == 'Homme' %}
                         <a href="{{ path('app_products_homme_show', {'id': product.id}) }}">
                     {% else %}
                         <a href="{{ path('app_products_femme_show', {'id': product.id}) }}">
                     {% endif %}
-                        <h5 class="fb-card-title">{{ product.name }}</h5>
+                        <h2 class="fb-card-title">{{ product.name }}</h2>
                     </a>
                     <p class="fb-card-text">{{ product.description|striptags }}</p>
                     <div class="flex items-center justify-between mt-5">
-                        <div class="text-2xl font-bold text-gray-900 dark:text-white">{{ product.price }}
-                            €</div>
+                        <div class="text-2xl font-bold text-gray-900 dark:text-white">{{ product.price }}€</div>
                         <div class="flex items-center space-x-2">
                             <a href="#" class="fb-button fb-button-primary">Ajouter au panier</a>
                         </div>
@@ -31,6 +30,3 @@
         {% endfor %}
     </div>
 </section>
-
-
-
